--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
   "CLICKUP_API_TOKEN": "pk_230462181_X7UUCQIC2FF13DDDMZQXFVQTCE638XUT",
-  "CLICKUP_LIST_ID": "901320105088"
+  "CLICKUP_LIST_ID": "901320105088",
+  "CLICKUP_ASSIGNEE_ID": "230462181"
 }
